<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:ads="http://shcemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <Button
        android:id="@+id/buttonAddTaskMainActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="44dp"
        android:text="@string/add_task"
        app:layout_constraintBottom_toTopOf="@+id/buttonLoginMainActivity"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewMyTaskMainActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="176dp"
        android:layout_marginBottom="8dp"
        android:text="@string/my_tasks"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/recyclerViewTaskListMainActivity"
        app:layout_constraintEnd_toStartOf="@+id/textViewUsernameMainActivity"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/buttonAllTasksMainActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="44dp"
        android:text="@string/all_tasks"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogoutMainActivity"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/imageViewSettingsIconMainActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_manage"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <TextView
        android:id="@+id/textViewUsernameMainActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/recyclerViewTaskListMainActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:text="Nickname" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewTaskListMainActivity"
        android:layout_width="370dp"
        android:layout_height="180dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="272dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonLoginMainActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="28dp"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/bannerAdView"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonLogoutMainActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="28dp"
        android:text="@string/logout"
        app:layout_constraintBottom_toTopOf="@+id/bannerAdView"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonInterstitialAdMainActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/interstitial_ad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonRewardAdMainActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/rewards_ad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonInterstitialAdMainActivity" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/bannerAdView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-3940256099942544/6300978111"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textViewRewardMainActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/rewards_ad_text_view"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRewardAdMainActivity"
        tools:text="Rewards" />

</androidx.constraintlayout.widget.ConstraintLayout>