<resources>
    <string name="app_name">TaskMaster</string>
    <string name="add_task">ADD TASK</string>
    <string name="my_tasks">My Tasks</string>
    <string name="todo">TODO</string>
    <string name="all_tasks">ALL TASKS</string>
    <string name="add_task_on_add_task_page">Add Task</string>
    <string name="my_task_text_input">My Task</string>
    <string name="do_something_text_input">Do something</string>
    <string name="task_title">%1$s</string>
    <string name="task_description">Task Description</string>
    <string name="add_task_submit_button">ADD TASK</string>
    <string name="total_tasks">Total tasks:</string>
    <string name="submitted" translatable="false">Submitted!</string>
    <string name="all_tasks_text_view_in_all_tasks_activity">All Tasks</string>
    <string name="taskOne">Task One</string>
    <string name="taskTwo">Take Two</string>
    <string name="taskThree">Task Three</string>
    <string name="task_1">Task 1</string>
    <string name="task_2">Task 2</string>
    <string name="task_3">Task 3</string>
    <string name="display_saved_username">%1$s</string>
    <string name="name">Name</string>
    <string name="settings">Settings</string>
    <string name="save">Saved!</string>
    <string name="save_button">Save</string>
    <string name="username">Username</string>
    <string name="no_saved_username">No username saved!</string>
    <string name="nickname">Nickname</string>
    <string name="nickname_main_activity">Nickname: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_task">No Task!</string>
    <string name="task_state">Task State</string>
    <string name="enter_username">Enter Username</string>
    <string name="team_name">Team Name</string>
    <string name="password">Password</string>
    <string name="verify">Verify</string>
    <string name="verification_code">Verification Code</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="submit">Submit</string>
    <string name="add_image">Add Image</string>
    <string name="delete">Delete Image</string>
    <string name="image_to_upload">Image to upload</string>
    <string name="task_name">Task Name</string>
    <string name="edit_task">Edit</string>
    <string name="edit_task_title">Edit Task</string>
    <string name="save_edit_task">Save</string>
    <string name="delete_task">Delete</string>
    <string name="task_image">Task Image</string>
    <string name="longitude">Longitude: %1$s</string>
    <string name="latitude">Latitude: %1$s</string>
    <string name="voice">Voice</string>
    <string name="interstitial_ad">Interstitial Ad</string>
    <string name="rewards_ad">Rewards Ad</string>
<!--    <string name="rewards_ad_text_view">%1$s %1$s</string>-->
    <string name="rewards_ad_text_view"></string>
</resources>